--- a/css/index.css
+++ b/css/index.css
@@ -113,7 +113,7 @@ input:focus {
 }
 
 #login .left {
-  background: url(../img/bg-login.jpg) no-repeat left;
+  background: url(../img/strategic-planning-communication.png) no-repeat left;
   background-size: cover;
 
   border-radius: 8px 0px 0px 8px;
